# HandcraftedLinReg

./: CMakeLists.txt  README.md
data/: dataset.csv  test.csv  train.csv
include/: DataHandler.h  LinearRegression.h
src/: DataHandler.cpp  LinearRegression.cpp  main.cpp
